--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -58,9 +58,70 @@
     }
 }
 
+.hero{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/Images/hero-shows.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 
+    @include desktop {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__album,
+    &__song {
+        margin: 0;
+        margin-left: 1.6rem;
+        color: $secondary-color;
+    }
 
+    &__album {
+        padding-top: 7rem;
+        padding-bottom: 3rem;
+        font-weight: 300;
 
+        @include tablet {
+            margin-left: 2.4rem;
+        }
+        @include desktop {
+            margin-left: 13rem;
+            padding-top: 20rem;
+        }
+    }
+    
+    &__song{
+        padding-bottom: 3rem;
+        font-weight: 600;
+        font-size: 4rem;
+
+        @include tablet {
+            margin-left: 2.4rem;
+            font-size: 6rem;
+            
+        }
+        @include desktop {
+            margin: 0;
+            padding-bottom: 20rem;
+            padding-left: 13rem;
+        }
+    }
+    
+    &__soundcloud {
+        margin-left: 1.6rem;
+        padding-bottom: 5rem;
+        width: 50%;
+        
+        @include tablet {
+            margin-left: 2.4rem;
+        }
+        @include desktop {
+            margin-right: 13rem;
+            margin-top: 25rem;
+            width: 30%;
+        }
+    }
+}
 
 .contact {
     background-color: $primary-color;
