--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #323232;
 $secondary-color: #FFFFFF;
+$tertiary-color: #FAFAFA;
+$quaternary-color: #E1E1E1;
 
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
