--- a/styles/shows.css
+++ b/styles/shows.css
@@ -160,15 +160,25 @@ body {
 }
 
 .shows {
-  margin-left: 1.6rem;
+  margin: 0 1.6rem;
   font-size: 1.6rem;
-  padding-bottom: 8rem;
+  padding-bottom: 2rem;
   border-bottom: 2px solid #E1E1E1;
 }
 .shows__title {
   font-weight: 400;
   font-size: 1.2rem;
   color: #E1E1E1;
+}
+.shows__button {
+  width: 100%;
+  height: 5rem;
+  font-size: 2rem;
+  font-family: "AvenirNext";
+  color: #FFFFFF;
+  background-color: #323232;
+  border-radius: 4px;
+  border-style: none;
 }
 
 .contact {
