--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -124,15 +124,26 @@
 }
 
 .shows {
-    margin-left: 1.6rem;
+    margin: 0 1.6rem;
     font-size: 1.6rem;
-    padding-bottom: 8rem;
+    padding-bottom: 2rem;
     border-bottom: 2px solid $quaternary-color;
 
     &__title {
         font-weight: 400;
         font-size: 1.2rem;
         color: $quaternary-color;
+    }
+
+    &__button {
+        width: 100%;
+        height: 5rem;
+        font-size: 2rem;
+        font-family: "AvenirNext";
+        color: $secondary-color;
+        background-color: $primary-color;
+        border-radius: 4px;
+        border-style: none;
     }
     
 
