--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -4,241 +4,249 @@
 @use "./partials/mixins" as *;
 
 .header {
-    background-color: $primary-color;
+  background-color: $primary-color;
+  width: 100%;
+
+  @include tablet {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  &__img {
     width: 100%;
+    max-height: 30px;
+    margin: 1.6rem 0;
 
     @include tablet {
-        display: flex;
-        justify-content: flex-start;
+      padding-right: 4rem;
+      margin: 2.4rem 2.4rem;
     }
-    
-    &__img{
-        width: 100%;
-        max-height: 30px;
-        margin: 1.6rem 0;
-
-        @include tablet {
-            padding-right: 4rem;
-            margin: 2.4rem 2.4rem;
-        }
-        @include desktop {
-            padding-left: 13rem;
-            margin-left: 0;
-        }
+    @include desktop {
+      padding-left: 13rem;
+      margin-left: 0;
     }
+  }
 }
 
 .navbar {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    &__tab{
-        
-        @include tablet {
-            margin: 3rem 2rem 1rem 2rem;
-            font-size: 1.6rem;  
-        }
+  &__tab {
+    @include tablet {
+      margin: 3rem 2rem 1rem 2rem;
+      font-size: 1.6rem;
     }
-    a {
-        flex-grow: 1;
-        text-decoration: none;
-        text-align: center;
-        padding-bottom: 1rem;
-        font-size: 2rem;
-        border-bottom: 3px solid $primary-color;
-    }
-    a:hover {
-        border-bottom: 3px solid $secondary-color;
-    }
-    a:active {
-        border-bottom: 3px solid $secondary-color;
-    }
-    a:visited{
-        color: $secondary-color;
-    }
+  }
+  a {
+    flex-grow: 1;
+    text-decoration: none;
+    text-align: center;
+    padding-bottom: 1rem;
+    font-size: 2rem;
+    border-bottom: 3px solid $primary-color;
+  }
+  a:hover {
+    border-bottom: 3px solid $secondary-color;
+  }
+  a:active {
+    border-bottom: 3px solid $secondary-color;
+  }
+  a:visited {
+    color: $secondary-color;
+  }
 }
 
-.hero{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/Images/hero-shows.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+.hero {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/Images/hero-shows.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-bottom: 1.6rem;
 
+  @include desktop {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__album,
+  &__song {
+    margin: 0;
+    margin-left: 1.6rem;
+    color: $secondary-color;
+  }
+
+  &__album {
+    padding-top: 7rem;
+    padding-bottom: 3rem;
+    font-weight: 300;
+
+    @include tablet {
+      margin-left: 2.4rem;
+    }
     @include desktop {
-        display: flex;
-        justify-content: space-between;
+      margin-left: 13rem;
+      padding-top: 20rem;
     }
-    &__album,
-    &__song {
-        margin: 0;
-        margin-left: 1.6rem;
-        color: $secondary-color;
-    }
+  }
 
-    &__album {
-        padding-top: 7rem;
-        padding-bottom: 3rem;
-        font-weight: 300;
+  &__song {
+    padding-bottom: 3rem;
+    font-weight: 600;
+    font-size: 4rem;
 
-        @include tablet {
-            margin-left: 2.4rem;
-        }
-        @include desktop {
-            margin-left: 13rem;
-            padding-top: 20rem;
-        }
+    @include tablet {
+      margin-left: 2.4rem;
+      font-size: 6rem;
     }
-    
-    &__song{
-        padding-bottom: 3rem;
-        font-weight: 600;
-        font-size: 4rem;
+    @include desktop {
+      margin: 0;
+      padding-bottom: 20rem;
+      padding-left: 13rem;
+    }
+  }
 
-        @include tablet {
-            margin-left: 2.4rem;
-            font-size: 6rem;
-            
-        }
-        @include desktop {
-            margin: 0;
-            padding-bottom: 20rem;
-            padding-left: 13rem;
-        }
+  &__soundcloud {
+    margin-left: 1.6rem;
+    padding-bottom: 5rem;
+    width: 50%;
+
+    @include tablet {
+      margin-left: 2.4rem;
     }
-    
-    &__soundcloud {
-        margin-left: 1.6rem;
-        padding-bottom: 5rem;
-        width: 50%;
-        
-        @include tablet {
-            margin-left: 2.4rem;
-        }
-        @include desktop {
-            margin-right: 13rem;
-            margin-top: 25rem;
-            width: 30%;
-        }
+    @include desktop {
+      margin-right: 13rem;
+      margin-top: 25rem;
+      width: 30%;
     }
+  }
+}
+
+.showsContainer {
+  h2 {
+    margin: 3.2rem 1.6rem;
+    font-size: 4rem;
+  }
 }
 
 .shows {
-    margin: 0 1.6rem;
-    font-size: 1.6rem;
-    padding-bottom: 2rem;
-    border-bottom: 2px solid $quaternary-color;
+  padding: 1.6rem;
+  font-size: 1.6rem;
+  padding-bottom: 2rem;
+  border-bottom: 2px solid $quaternary-color;
 
-    &__title {
-        font-weight: 400;
-        font-size: 1.2rem;
-        color: $quaternary-color;
-    }
+  &__details {
+    margin-top: 1.6rem;
+    margin-bottom: 1.6rem;
+  }
 
-    &__button {
-        width: 100%;
-        height: 5rem;
-        font-size: 2rem;
-        font-family: "AvenirNext";
-        color: $secondary-color;
-        background-color: $primary-color;
-        border-radius: 4px;
-        border-style: none;
-    }
-    
+  &__title {
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: $quaternary-color;
+  }
 
+  &__button {
+    width: 100%;
+    height: 5rem;
+    font-size: 2rem;
+    font-family: "AvenirNext";
+    color: $secondary-color;
+    background-color: $primary-color;
+    border-radius: 4px;
+    border-style: none;
+  }
 }
 
 .contact {
-    background-color: $primary-color;
-    color: $secondary-color;
+  background-color: $primary-color;
+  color: $secondary-color;
 
-    @include desktop {
-        padding: 0 13rem;
-    }
-    
-    &__title {
-        margin: 0;
-        margin-left: 1.6rem;
-        padding-top: 2.4rem;
-        font-size: 3rem;
-        font-weight: 600;
+  @include desktop {
+    padding: 0 13rem;
+  }
 
-        @include tablet {
-            margin: 0;
-        }
-    }
-    &__booking {
-        @include tablet {
-            display: flex;
-            justify-content: space-around;
-        }
-    }
-    &__socials {
-        @include tablet {
-            display: flex;
-            margin: 0 2.4rem;
-            padding-top: 3.6rem;
-        }
-        h2{
-            @include tablet {
-                font-size: 3.6rem;
-            }
-        }
-    }
-}
-.icons img{
-    padding-right: 1rem;
-    padding-left: 1.6rem;
+  &__title {
+    margin: 0;
+    margin-left: 1.6rem;
     padding-top: 2.4rem;
+    font-size: 3rem;
+    font-weight: 600;
 
     @include tablet {
-        padding: 0;
-        height: 90%;
-        padding-right: 2.4rem;
-        padding-left: 2.4rem;
-        padding-top: 2.4rem;
-
+      margin: 0;
     }
+  }
+  &__booking {
+    @include tablet {
+      display: flex;
+      justify-content: space-around;
+    }
+  }
+  &__socials {
+    @include tablet {
+      display: flex;
+      margin: 0 2.4rem;
+      padding-top: 3.6rem;
+    }
+    h2 {
+      @include tablet {
+        font-size: 3.6rem;
+      }
+    }
+  }
+}
+.icons img {
+  padding-right: 1rem;
+  padding-left: 1.6rem;
+  padding-top: 2.4rem;
+
+  @include tablet {
+    padding: 0;
+    height: 90%;
+    padding-right: 2.4rem;
+    padding-left: 2.4rem;
+    padding-top: 2.4rem;
+  }
 }
 .booking {
-    margin-left: 1.6rem;
+  margin-left: 1.6rem;
 
-    @include tablet {
-        margin: 0;
-    }
+  @include tablet {
+    margin: 0;
+  }
 
-    &__name{
-        margin: 0;
-        margin-top: 3.2rem;
-        font-weight: 500;
-    }
-    a:link{
-        text-decoration: none;
-        color: $secondary-color;
-    }
-    a:visited{
-        color: $secondary-color;    
-    }
-    
+  &__name {
+    margin: 0;
+    margin-top: 3.2rem;
+    font-weight: 500;
+  }
+  a:link {
+    text-decoration: none;
+    color: $secondary-color;
+  }
+  a:visited {
+    color: $secondary-color;
+  }
 }
 .copyright {
-    &__info {
-        margin: 0;
-        margin-left: 1.6rem;
-        padding-bottom: 1.6rem;
-        
-        @include tablet {
-            margin-left: 2.4rem;
-        }
-    }
-}
-.footer__img img{
-    padding-top: 5rem;
-    padding-left: 1.6rem;
+  &__info {
+    margin: 0;
+    margin-left: 1.6rem;
     padding-bottom: 1.6rem;
 
     @include tablet {
-        padding-left: 2.4rem;
+      margin-left: 2.4rem;
     }
+  }
+}
+.footer__img img {
+  padding-top: 5rem;
+  padding-left: 1.6rem;
+  padding-bottom: 1.6rem;
+
+  @include tablet {
+    padding-left: 2.4rem;
+  }
 }
