--- a/styles/shows.css
+++ b/styles/shows.css
@@ -174,6 +174,7 @@ body {
 .shows__details {
   margin-top: 1.6rem;
   margin-bottom: 1.6rem;
+  color: #323232;
 }
 .shows__title {
   font-weight: 400;
