--- a/styles/shows.css
+++ b/styles/shows.css
@@ -171,6 +171,13 @@ body {
   padding-bottom: 2rem;
   border-bottom: 2px solid #e1e1e1;
 }
+@media (min-width: 768px) {
+  .shows {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 1.6rem;
+  }
+}
 .shows__details {
   margin-top: 1.6rem;
   margin-bottom: 1.6rem;
@@ -181,6 +188,11 @@ body {
   font-size: 1.2rem;
   color: #e1e1e1;
 }
+@media (min-width: 768px) {
+  .shows__title {
+    display: none;
+  }
+}
 .shows__button {
   width: 100%;
   height: 5rem;
@@ -190,6 +202,28 @@ body {
   background-color: #323232;
   border-radius: 4px;
   border-style: none;
+}
+@media (min-width: 768px) {
+  .shows__button {
+    width: 20%;
+  }
+}
+
+.titlesContainer {
+  margin: 0 1.6rem;
+  display: none;
+}
+@media (min-width: 768px) {
+  .titlesContainer {
+    display: flex;
+    justify-content: flex-start;
+    margin: 0 1.6rem;
+  }
+}
+.titlesContainer__names {
+  font-weight: 400;
+  font-size: 1.2rem;
+  color: #e1e1e1;
 }
 
 .contact {
