--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -136,6 +136,12 @@
   padding-bottom: 2rem;
   border-bottom: 2px solid $quaternary-color;
 
+  @include tablet {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 1.6rem;
+  }
+
   &__details {
     margin-top: 1.6rem;
     margin-bottom: 1.6rem;
@@ -146,6 +152,10 @@
     font-weight: 400;
     font-size: 1.2rem;
     color: $quaternary-color;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__button {
@@ -157,6 +167,27 @@
     background-color: $primary-color;
     border-radius: 4px;
     border-style: none;
+
+    @include tablet {
+      width: 20%;
+    }
+  }
+}
+
+.titlesContainer {
+  margin: 0 1.6rem;
+  display: none;
+
+  @include tablet {
+    display: flex;
+    justify-content: flex-start;
+    margin: 0 1.6rem;
+  }
+
+  &__names {
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: $quaternary-color;
   }
 }
 
