--- a/styles/shows.css
+++ b/styles/shows.css
@@ -163,6 +163,17 @@ body {
 .showsContainer h2 {
   margin: 3.2rem 1.6rem;
   font-size: 4rem;
+  color: #323232;
+}
+@media (min-width: 768px) {
+  .showsContainer h2 {
+    margin-left: 2.4rem;
+  }
+}
+@media (min-width: 1280px) {
+  .showsContainer h2 {
+    margin: 0 13rem;
+  }
 }
 
 .shows {
@@ -208,6 +219,11 @@ body {
     width: 20%;
   }
 }
+@media (min-width: 1280px) {
+  .shows__group {
+    margin-left: 40rem;
+  }
+}
 
 .titlesContainer {
   margin: 0 1.6rem;
@@ -216,14 +232,19 @@ body {
 @media (min-width: 768px) {
   .titlesContainer {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin: 0 1.6rem;
+    padding-left: 1.6rem;
+    padding-right: 15rem;
   }
 }
 .titlesContainer__names {
   font-weight: 400;
   font-size: 1.2rem;
   color: #e1e1e1;
+}
+.titlesContainer__placeHolder {
+  color: white;
 }
 
 .contact {
