--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -127,6 +127,14 @@
   h2 {
     margin: 3.2rem 1.6rem;
     font-size: 4rem;
+    color: $primary-color;
+
+    @include tablet {
+      margin-left: 2.4rem;
+    }
+    @include desktop {
+      margin: 0 13rem;
+    }
   }
 }
 
@@ -172,6 +180,11 @@
       width: 20%;
     }
   }
+  &__group {
+    @include desktop {
+      margin-left: 40rem;
+    }
+  }
 }
 
 .titlesContainer {
@@ -180,14 +193,19 @@
 
   @include tablet {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin: 0 1.6rem;
+    padding-left: 1.6rem;
+    padding-right: 15rem;
   }
 
   &__names {
     font-weight: 400;
     font-size: 1.2rem;
     color: $quaternary-color;
+  }
+  &__placeHolder {
+    color: white;
   }
 }
 
