--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -134,6 +134,7 @@
     }
     @include desktop {
       margin: 0 13rem;
+      margin-top: 4.8rem;
     }
   }
 }
@@ -154,6 +155,7 @@
     margin-top: 1.6rem;
     margin-bottom: 1.6rem;
     color: $primary-color;
+    width: 20%;
   }
 
   &__title {
@@ -196,16 +198,18 @@
     justify-content: space-between;
     margin: 0 1.6rem;
     padding-left: 1.6rem;
-    padding-right: 15rem;
+    // padding-right: 15rem;
   }
 
   &__names {
     font-weight: 400;
     font-size: 1.2rem;
     color: $quaternary-color;
+    width: 20%;
   }
   &__placeHolder {
     color: white;
+    width: 20%;
   }
 }
 
@@ -219,6 +223,7 @@
 
   &__title {
     margin: 0;
+    margin-top: 2rem;
     margin-left: 1.6rem;
     padding-top: 2.4rem;
     font-size: 3rem;
@@ -238,6 +243,7 @@
     @include tablet {
       display: flex;
       margin: 0 2.4rem;
+      margin-top: 4rem;
       padding-top: 3.6rem;
     }
     h2 {
